[package]
name = "offst-crypto"
version = "0.1.0"
authors = ["real <real@freedomlayer.org>"]

[dependencies]

common = { path = "../common", version = "0.1.0", package = "offst-common" }

rand = "0.5"
ring = "0.14.6"
untrusted = "0.6"

serde = "1"
serde_derive = "1"
bytes = "0.4"
base64 = "0.9"

lazy_static = "1.3.0"

[dependencies.byteorder]
version = "1.1"
features = ["i128"]

[dev-dependencies]
